storage_load_balancer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-api-deployment
  namespace: cjarcau
  labels:
    app: go-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-api
  template:
    metadata:
      labels:
        app: go-api
    spec:
      containers:
      - name: go-api
        image: scr4pp/go_load_balancer
        ports:
        - name: go-api
          containerPort: 9000
        imagePullPolicy: IfNotPresent
