storage_load_balancer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-api-ingress
  namespace: cjarcau
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
spec:
  rules:
    - http:
        paths:
          - path: /balancer
            pathType: Prefix
            backend:
              service:
                name: go-api-service
                port:
                  number: 49151
  ingressClassName: nginx
